	     the problems on NT.
	   - Added HTTP Proxy support to phpgw_network.
	   - Pop3: when a header line started with cc:, from:, ..., but
	     no information followed the colon, a bunch of error messages were
	     displayed ("xxx not an object"). Fixed.
	   - Inventory program now supports changeable status fields.
	   - Added feature to show minium in stock products in different colors.
	   

[08212000] - removed db_lock() and db_unlock()  I changed the phpgw_db_* to use them
	     properly
	   - remove all remaining references to $dbase and $phpgw_db we are now using
	     $phpgw->db for database stuff
	   - Added unlock() in halt() for the database class.  This should help prevent
	     database lockups if the program executes some invailed SQL.
	   - Moved around the directory layout.  The include files and images are now
	     in the applications directory.
	   - You can now add permissions to a group, all users within that group
	     would be granted those permissions.
	   - NNTP now compatible with PHP3/PHP4.
	   - Fixed parse errors and footer problems with the calendars printer
	     friendly version.
	   - Fixed a problem with the groups directory not being deleted.
	   - Fixed a problem with not being able to add users to a group.
	   - Fixed bad links in calendar
	   - Added feature to be able to remove users from a group automaticly
	   - changetheme.php will now read the files in the directory.  You no longer
	     need to edit it to add themes
	   - Fixed a problem with the default sorting order messing up the next matchs
	     while viewing a message
	   - Added feature to check for new releases of phpGW
	   - Added feature to filter out entrys only within a certain group.
	     This is for the todo list and addressbook.
	   - Added a search field and next matchs icons to accounts and groups form.
	   - Fixed the "code" messages not showing up after adding new entrys and what not.
	   - Started converting the admin section to work off templates